# starter

./: .bazelrc  .rustfmt.toml  BUILD.bazel  Cargo.toml  LICENSE  MODULE.bazel  README  WORKSPACE.bazel  bazel-starter
bazel/cc/: BUILD.bazel  toolchain_config.bzl
bazel/patches/: rules_rust-env.patch
bazel/rust/: cargo-bazel-lock.json  defs.bzl
starter/: BUILD.bazel  greet.rs  greeting.proto  greeting_builder.cc
